--- a/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
+++ b/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
@@ -71,6 +71,12 @@
     <Compile Include="SignInPage.Designer.cs">
       <DependentUpon>SignInPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserPage.Designer.cs">
+      <DependentUpon>UserPage.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminPage.resx">
       <DependentUpon>AdminPage.cs</DependentUpon>
     </EmbeddedResource>
