LOCAL DATABASE ADDED

--- a/CoffeeManagement/CoffeeManagement/App.config
+++ b/CoffeeManagement/CoffeeManagement/App.config
@@ -6,6 +6,9 @@
         <add name="CoffeeManagement.Properties.Settings.CoffeeManagementItems"
             connectionString="Data Source=LAPTOP-AAAAAAAA;Initial Catalog=CoffeeManagement;Persist Security Info=True;User ID=sa"
             providerName="System.Data.SqlClient" />
+        <add name="CoffeeManagement.Properties.Settings.Database1ConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
