--- a/CoffeeManagement/CoffeeManagement/App.config
+++ b/CoffeeManagement/CoffeeManagement/App.config
@@ -3,11 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CoffeeManagement.Properties.Settings.CoffeeManagementItems"
-            connectionString="Data Source=LAPTOP-AAAAAAAA;Initial Catalog=CoffeeManagement;Persist Security Info=True;User ID=sa"
-            providerName="System.Data.SqlClient" />
         <add name="CoffeeManagement.Properties.Settings.Database1ConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True; TrustServerCertificate=True "
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
