--- a/CoffeeManagement/CoffeeManagement/App.config
+++ b/CoffeeManagement/CoffeeManagement/App.config
@@ -4,10 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="CoffeeManagement.Properties.Settings.CafebaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Cafebase.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Cafebase.mdf;Integrated Security=True; User ID=sa"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-</configuration>
+</configuration>    
