--- a/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
+++ b/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6A618616-CE18-446B-8AA0-43ED6F43056E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>CoffeeManagement</RootNamespace>
-    <AssemblyName>CoffeeManagement</AssemblyName>
+    <AssemblyName>CafeManager by YG</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,6 +47,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Main.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -72,6 +75,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CafebaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Color.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +112,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SignInPage.resx">
       <DependentUpon>SignInPage.cs</DependentUpon>
@@ -159,6 +164,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Cafebase.mdf</DependentUpon>
     </Content>
+    <Content Include="Main.ico" />
+    <None Include="Resources\YG1.png" />
+    <None Include="Resources\YG.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
