--- a/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
+++ b/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
@@ -75,7 +75,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CafebaseDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Color.cs" />
+    <Compile Include="ColorCodes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,12 +85,6 @@
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignInPage.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SignInPage.Designer.cs">
-      <DependentUpon>SignInPage.cs</DependentUpon>
-    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="UserPage.cs">
       <SubType>Form</SubType>
@@ -114,9 +108,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SignInPage.resx">
-      <DependentUpon>SignInPage.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UserPage.resx">
       <DependentUpon>UserPage.cs</DependentUpon>
     </EmbeddedResource>
