--- a/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
+++ b/CoffeeManagement/CoffeeManagement/CoffeeManagement.csproj
@@ -76,11 +76,17 @@
       <DependentUpon>CafebaseDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="ColorCodes.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="CafeManager.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CafeManager.Designer.cs">
+      <DependentUpon>CafeManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Log-Sign.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Log-Sign.Designer.cs">
+      <DependentUpon>Log-Sign.cs</DependentUpon>
     </Compile>
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
@@ -95,8 +101,11 @@
     <EmbeddedResource Include="AdminPage.resx">
       <DependentUpon>AdminPage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CafeManager.resx">
+      <DependentUpon>CafeManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Log-Sign.resx">
+      <DependentUpon>Log-Sign.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
